[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/combate.png" type="Texture" id=1]
[ext_resource path="res://Pelea.gd" type="Script" id=2]
[ext_resource path="res://Resources/guerrero.png" type="Texture" id=3]
[ext_resource path="res://Resources/mago.png" type="Texture" id=4]
[ext_resource path="res://Resources/dado.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 8, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 120, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 232, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 344, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 456, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 568, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 112, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 224, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 336, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 560, 560, 109, 111 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "rolling",
"speed": 15.0
} ]

[node name="Pelea" type="Node2D"]
position = Vector2( -96, 0 )
scale = Vector2( 0.999999, 1 )
script = ExtResource( 2 )

[node name="mapa" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.266398, 0.278701 )
texture = ExtResource( 1 )

[node name="jugador" type="Node2D" parent="."]
position = Vector2( 176, 397 )

[node name="rival" type="Node2D" parent="."]
position = Vector2( 840, 432 )

[node name="defensaJugador" type="Label" parent="."]
margin_left = 168.0
margin_top = 88.0
margin_right = 208.0
margin_bottom = 102.0
rect_scale = Vector2( 7.04, 5.80882 )
text = "1"

[node name="ataqueJugador" type="Label" parent="."]
margin_left = 72.0
margin_top = 88.0
margin_right = 112.0
margin_bottom = 102.0
rect_scale = Vector2( 5.68, 6.04 )
text = "1"

[node name="vidaJugador" type="Label" parent="."]
margin_left = 264.0
margin_top = 88.0
margin_right = 304.0
margin_bottom = 102.0
rect_scale = Vector2( 8.04, 6.19135 )
text = "1"

[node name="ficha1" type="Sprite" parent="."]
position = Vector2( -128, 152 )
scale = Vector2( -0.374581, 0.299028 )
texture = ExtResource( 3 )

[node name="ficha2" type="Sprite" parent="."]
position = Vector2( -96, 400 )
scale = Vector2( -0.335858, 0.301835 )
texture = ExtResource( 4 )

[node name="defensaRival" type="Label" parent="."]
margin_left = 800.0
margin_top = 88.0
margin_right = 840.0
margin_bottom = 102.0
rect_scale = Vector2( 7.04, 5.80882 )
text = "1"

[node name="ataqueRival" type="Label" parent="."]
margin_left = 704.0
margin_top = 88.0
margin_right = 744.0
margin_bottom = 102.0
rect_scale = Vector2( 5.68, 6.04 )
text = "1"

[node name="vidaRival" type="Label" parent="."]
margin_left = 896.0
margin_top = 88.0
margin_right = 936.0
margin_bottom = 102.0
rect_scale = Vector2( 8.04, 6.19135 )
text = "1"

[node name="dado2" type="AnimatedSprite" parent="."]
position = Vector2( 568, 400 )
rotation = 0.644968
scale = Vector2( 1.05822, 1.02655 )
frames = SubResource( 13 )
animation = "1"
playing = true

[node name="dado" type="AnimatedSprite" parent="."]
position = Vector2( 448, 320 )
rotation = 0.694879
scale = Vector2( 1.03406, 1.00777 )
frames = SubResource( 13 )
animation = "1"
playing = true

[node name="Button" type="Button" parent="."]
margin_left = 448.0
margin_top = 496.0
margin_right = 483.0
margin_bottom = 516.0
rect_scale = Vector2( 4.24, 3.2 )
text = "Tira"

[connection signal="ready" from="." to="." method="_on_Pelea_ready"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
